@@ -17,6 +17,8 @@
 	bug #8018.  Patch by Jos Backus.
 	* post-install.rb: Install using absolute path.  Fixes bug #10675.
 	Patch by Jeremy Burks.
+	* lib/rubygems/commands/environment_command.rb: Add RUBY VERSION to
+	environment output.
 
 2007-07-22  Eric Hodel  <drbrain@segment7.net>
 
